<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/debtor_name" />
		<EditText android:id="@+id/debtor_name" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>
	
		<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/quantity" />
		<EditText android:id="@+id/quantity_edit" 
		  android:layout_width="wrap_content"
		  android:inputType="numberDecimal"
		  android:digits="0123456789.,"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/comments" />
	<EditText android:id="@+id/comments_edit" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	

	<Button android:id="@+id/confirm" 
	  android:text="@string/ok"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	<Button   
	    android:id="@+id/mail_btn"
	    android:text="@string/send_mail"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"/>

</LinearLayout>