<?xml version="1.0" encoding="utf-8"?>
<ScrollView  
 xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

<LinearLayout 
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background2">
	
	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:paddingLeft= "10dp"
    	android:layout_marginTop="10dp"
    	android:layout_marginRight="10dp"
		android:layout_height="wrap_content">
		
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/look_for"
	        android:textColor="#FFF"
	        android:textSize="20sp"/>
	</LinearLayout>
	
		<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
			android:paddingLeft= "10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textSize="20sp"
			android:textColor="#AA66CC"
			android:text="@string/username" />
		<EditText android:id="@+id/input_username_cont" 
		  android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textCursorDrawable="@null"
                android:paddingBottom="5dp"
                android:textSize="15sp"
                android:background="@drawable/rounded_edittext"
              	android:textColor="@android:color/black"
              	android:inputType="text"/>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft= "10dp"
    	android:layout_marginTop="10dp"
   	 	android:layout_marginRight="10dp">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textSize="20sp"
			android:textColor="#99CC00"
			android:text="@string/email" />
		<EditText android:id="@+id/email_input_cont" 
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textCursorDrawable="@null"
                android:paddingBottom="5dp"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:background="@drawable/rounded_edittext"
              	android:textColor="@android:color/black"
			android:scrollbars="vertical" />
		
		</LinearLayout>
		
	            
	  <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="20dp" > 

		<Button android:id="@+id/confirm" 
		  	android:text="@string/ok"
			android:background="@drawable/black_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFBB33"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp" />
		</LinearLayout>

</LinearLayout>
</ScrollView>